Fixed bug where management view was visible while not logged in

--- a/src/map-app/src/style.css
+++ b/src/map-app/src/style.css
@@ -123,19 +123,19 @@ body {
 /* Styling for mobile devices */
 @media (max-width: 900px) {
   .app .management_view {
-    width: 100vw;
+    width: 100%;
   }
 
   .app .snow_tab {
-    width: 100vw;
+    width: 100%;
   }
 
   .app .map_container {
-    width: 100vw;
+    width: 100%;
   }
 
   .app .weather_tab {
-    width: 100vw;
+    width: 100%;
   }
 
   .welcome_view {
@@ -143,7 +143,7 @@ body {
     top: 0px;
     left: 0px;
     width: 100vw;
-    height: 100vh;
+    height: 100%vh;
     z-index: 6;
   }
 }
